# ethminer

./: CMakeLists.txt
libethash-ocl/: CLMiner.cpp  CLMiner.h  CMakeLists.txt
libethash-ocl/AOCLUtils/: opencl.cpp
libethash-ocl/builds/: CLMiner_kernel_stable.aoco
libethash-ocl/builds/CLMiner_kernel_stable/: CLMiner_kernel_stable.bc.xml  CLMiner_kernel_stable.d  CLMiner_kernel_stable_system.v  CLMiner_kernel_stable_system_hw.tcl  afu_opencl_kernel.qsf  autodiscovery.xml  automigration.rpt  board_spec.xml  compiler_metrics.out  dcp.qpf  ethash_calculate_dag_item.attrib  ethash_search.attrib  kernel_system.qsys  kernel_system.tcl  quartuserr.tmp  sys_description.hex  sys_description.legend.txt  sys_description.txt
libethash-ocl/builds/CLMiner_kernel_stable/design/afu/: green_bs.sdc
libethash-ocl/builds/CLMiner_kernel_stable/design/interrupts/msix_dcfifo/fifo_171/synth/: msix_dcfifo_fifo_171_f2ukwki.sdc
libethash-ocl/builds/CLMiner_kernel_stable/design/memory/emif_ddr4/altera_emif_arch_nf_160/synth/: emif_ddr4_altera_emif_arch_nf_160_dv2mq2q.sdc  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_ip_parameters.tcl  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_pin_map.tcl  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_report_io_timing.tcl  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_report_timing.tcl  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_report_timing_core.tcl  emif_ddr4_altera_emif_arch_nf_160_dv2mq2q_utils.tcl  emif_ddr4_altera_emif_arch_nf_160_pgklvrq.sdc  emif_ddr4_altera_emif_arch_nf_160_pgklvrq_ip_parameters.tcl  emif_ddr4_altera_emif_arch_nf_160_pgklvrq_pin_map.tcl  emif_ddr4_altera_emif_arch_nf_160_pgklvrq_report_io_timing.tcl  emif_ddr4_altera_emif_arch_nf_160_pgklvrq_report_timing.tcl  emif_ddr4_altera_emif_arch_nf_160_pgklvrq_report_timing_core.tcl  (+15 more)
libethash-ocl/builds/CLMiner_kernel_stable/design/sdc/: fabric.sdc  skx_bbs.sdc
libethash-ocl/builds/CLMiner_kernel_stable/design/top/: dcp_top.sdc
libethash-ocl/builds/CLMiner_kernel_stable/ip/kernel_system/: kernel_system_CLMiner_kernel_stable_system.ip  kernel_system_acl_internal_snoop.ip  kernel_system_avs_ethash_calculate_dag_item_cra_cra_ring.ip  kernel_system_avs_ethash_search_cra_cra_ring.ip  kernel_system_clk_1x.ip  kernel_system_clk_2x.ip  kernel_system_clk_snoop.ip  kernel_system_cra_ring_rom.ip  kernel_system_cra_root.ip  kernel_system_kernel_cra.ip  kernel_system_kernel_ddr4a.ip  kernel_system_kernel_ddr4b.ip  kernel_system_kernel_irq.ip  kernel_system_reset.ip  kernel_system_sys_description_rom.ip
libethash-ocl/builds/CLMiner_kernel_stable/kernel_hdl/ethash_calculate_dag_item/: bb_ethash_calculate_dag_item_B0.vhd  bb_ethash_calculate_dag_item_B0_stall_region.vhd  bb_ethash_calculate_dag_item_B1.vhd  bb_ethash_calculate_dag_item_B1_sr_0.vhd  bb_ethash_calculate_dag_item_B1_sr_1.vhd  bb_ethash_calculate_dag_item_B1_stall_region.vhd  bb_ethash_calculate_dag_item_B2.vhd  bb_ethash_calculate_dag_item_B2_sr_0.vhd  bb_ethash_calculate_dag_item_B2_stall_region.vhd  bb_ethash_calculate_dag_item_B3.vhd  bb_ethash_calculate_dag_item_B3_sr_0.vhd  bb_ethash_calculate_dag_item_B3_sr_1.vhd  bb_ethash_calculate_dag_item_B3_stall_region.vhd  bb_ethash_calculate_dag_item_B4.vhd  bb_ethash_calculate_dag_item_B4_sr_0.vhd  bb_ethash_calculate_dag_item_B4_stall_region.vhd  bb_ethash_calculate_dag_item_B5.vhd  bb_ethash_calculate_dag_item_B5_sr_0.vhd  bb_ethash_calculate_dag_item_B5_sr_1.vhd  bb_ethash_calculate_dag_item_B5_stall_region.vhd  bb_ethash_calculate_dag_item_B6.vhd  bb_ethash_calculate_dag_item_B6_sr_0.vhd  bb_ethash_calculate_dag_item_B6_stall_region.vhd  ethash_calculate_dag_item_B0_branch.vhd  ethash_calculate_dag_item_B0_merge.vhd  ethash_calculate_dag_item_B0_merge_reg.vhd  ethash_calculate_dag_item_B1_branch.vhd  ethash_calculate_dag_item_B1_merge.vhd  ethash_calculate_dag_item_B1_merge_reg.vhd  ethash_calculate_dag_item_B2_branch.vhd  ethash_calculate_dag_item_B2_merge.vhd  ethash_calculate_dag_item_B3_branch.vhd  ethash_calculate_dag_item_B3_merge.vhd  ethash_calculate_dag_item_B3_merge_reg.vhd  ethash_calculate_dag_item_B4_branch.vhd  ethash_calculate_dag_item_B4_merge.vhd  ethash_calculate_dag_item_B5_branch.vhd  ethash_calculate_dag_item_B5_merge.vhd  ethash_calculate_dag_item_B5_merge_reg.vhd  ethash_calculate_dag_item_B6_branch.vhd  (+42 more)
libethash-ocl/builds/CLMiner_kernel_stable/kernel_hdl/ethash_search/: bb_ethash_search_B0.vhd  bb_ethash_search_B0_stall_region.vhd  bb_ethash_search_B1.vhd  bb_ethash_search_B1_sr_0.vhd  bb_ethash_search_B1_sr_1.vhd  bb_ethash_search_B1_stall_region.vhd  bb_ethash_search_B2.vhd  bb_ethash_search_B2_sr_0.vhd  bb_ethash_search_B2_stall_region.vhd  bb_ethash_search_B3.vhd  bb_ethash_search_B3_sr_0.vhd  bb_ethash_search_B3_sr_1.vhd  bb_ethash_search_B3_stall_region.vhd  bb_ethash_search_B4.vhd  bb_ethash_search_B4_sr_0.vhd  bb_ethash_search_B4_sr_1.vhd  bb_ethash_search_B4_stall_region.vhd  bb_ethash_search_B5.vhd  bb_ethash_search_B5_sr_0.vhd  bb_ethash_search_B5_stall_region.vhd  bb_ethash_search_B6.vhd  bb_ethash_search_B6_sr_0.vhd  bb_ethash_search_B6_stall_region.vhd  bb_ethash_search_B7.vhd  bb_ethash_search_B7_sr_0.vhd  bb_ethash_search_B7_sr_1.vhd  bb_ethash_search_B7_stall_region.vhd  bb_ethash_search_B8.vhd  bb_ethash_search_B8_sr_0.vhd  bb_ethash_search_B8_stall_region.vhd  dupName_0_loop_capacity_FIFO_2u1i4agm067A0Z6x6s6u0qc0xgbuoz.vhd  dupName_0_priority_encoder_26ui0676j636g6u0qc0xajz.vhd  dupName_1_loop_capacity_FIFO_2u1i4agm067A0Z6x6s6u0qc0xgbuoz.vhd  dupName_1_priority_encoder_26ui0676j636g6u0qc0xajz.vhd  ethash_search_B0_branch.vhd  ethash_search_B0_merge.vhd  ethash_search_B0_merge_reg.vhd  ethash_search_B1_branch.vhd  ethash_search_B1_merge.vhd  ethash_search_B1_merge_reg.vhd  (+96 more)
libethash-ocl/builds/CLMiner_kernel_stable/reports/lib/: report_data.js
libethash-ocl/builds/CLMiner_kernel_stable/reports/lib/json/: area.json  area_src.json  info.json  lmv.json  loops.json  mav.json  summary.json  warnings.json
(+52 files in other folders)
